new proj/src/objects/GE_PW_KYC_Communication__c.object
<CustomObject>
    <fields>
        <fullName>GE_PW_Account_name__c</fullName>
        <formula>GE_PW_KYC__r.GE_HQ_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>KYC_Communication</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PW_CMF_Request_status__c</fullName>
        <formula>TEXT(GE_PW_KYC__r.GE_HQ_Account__r.GE_HQ_CMF_Request_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMF Request status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Communication__c</fullName>
        <label>Communication</label>
        <picklist>
            <picklistValues>
                <fullName>Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_KYC__c</fullName>
        <label>KYC</label>
        <referenceTo>GE_PRM_KYC_Termination_Checklist__c</referenceTo>
        <relationshipLabel>KYC Communication</relationshipLabel>
        <relationshipName>KYC_Communication</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_PW_KYC_status__c</fullName>
        <formula>TEXT( GE_PW_KYC__r.GE_HQ_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KYC status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>KYC_Communication1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>KYC Communication</label>
    <nameField>
        <displayFormat>CMN-{0000}</displayFormat>
        <label>KYC Communication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KYC Communication</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>